--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,8 @@
-name: Deploy Web Demo to GitHub Pages
+name: Deploy ScanKey Landing to GitHub Pages
 
 on:
   push:
-    branches: ["web-demo"]
+    branches: ["main"]
 
 permissions:
   contents: read
@@ -14,41 +14,20 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  build:
+  deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: "npm"
-
-      - run: npm ci
-
-      # Si es Expo -> export web estático a /dist
-      # Si es Vite/React -> npm run build a /dist
-      - name: Build (auto-detect)
+      - name: Prepare static site (docs)
         run: |
-          node -e "const p=require('./package.json'); const deps={...p.dependencies,...p.devDependencies}; console.log(JSON.stringify(Object.keys(deps||{})))" > /tmp/deps.json
-          if grep -q '"expo"' /tmp/deps.json; then
-            echo "Detected: EXPO -> npx expo export -p web"
-            npx expo export -p web --output-dir dist
-          else
-            echo "Detected: NON-EXPO -> npm run build"
-            npm run build
-            # si el build no crea dist, intenta build/
-            if [ ! -d dist ] && [ -d build ]; then mv build dist; fi
-          fi
+          mkdir -p docs
+          if [ -f index.html ]; then cp -f index.html docs/index.html; fi
+          echo "scankeyapp.com" > docs/CNAME
+          touch docs/.nojekyll
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: docs
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    environment:
-      name: github-pages
-    steps:
       - uses: actions/deploy-pages@v4
