pages: deploy expo web export

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,8 +1,9 @@
-name: Deploy ScanKey Landing to GitHub Pages
+name: Deploy ScanKey Web (Expo) to GitHub Pages
 
 on:
   push:
     branches: ["main"]
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -14,20 +15,35 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
 
-      - name: Prepare static site (docs)
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: Install
+        run: npm ci
+
+      - name: Export Expo Web
         run: |
-          mkdir -p docs
-          if [ -f index.html ]; then cp -f index.html docs/index.html; fi
-          echo "scankeyapp.com" > docs/CNAME
-          touch docs/.nojekyll
+          npx expo --version
+          npx expo export -p web --output-dir dist
+
+      - name: Add CNAME + nojekyll
+        run: |
+          echo "scankeyapp.com" > dist/CNAME
+          touch dist/.nojekyll
 
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: docs
+          path: dist
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - uses: actions/deploy-pages@v4
