--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -1,4 +1,4 @@
-name: Deploy Expo Web to GitHub Pages
+name: Deploy Web (Expo) to GitHub Pages
 
 on:
   push:
@@ -27,42 +27,37 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Install
+      - name: Install deps
         run: npm ci
 
-      - name: Build + Prepare (Expo Web)
-        run: |
-          # Build
-          npx expo export -p web
+      - name: Build web (Expo export)
+        env:
+          EXPO_PUBLIC_MOTOR_BASE: https://classify-llaves-2apb4vvlhq-ew.a.run.app
+        run: npx expo export --platform web --output-dir dist
 
-          # Detect output dir (Expo suele usar dist/)
-          OUT="dist"
-          if [ ! -d "$OUT" ]; then
-            for cand in web-build build; do
-              if [ -d "$cand" ]; then OUT="$cand"; break; fi
-            done
-          fi
+      # SPA routing: cualquier ruta -> index.html
+      - name: SPA fallback (404.html)
+        run: cp dist/index.html dist/404.html
 
-          echo "Using OUT=$OUT"
-          echo "OUT_DIR=$OUT" >> "$GITHUB_ENV"
-
-          # Needed for GH Pages
-          touch "$OUT/.nojekyll"
-
-          # Custom domain (mantiene scankeyapp.com estable)
-          echo "scankeyapp.com" > "$OUT/CNAME"
-
-          # Sanity
-          test -f "$OUT/index.html" || (echo "ERROR: no index.html in $OUT" && ls -la "$OUT" && exit 1)
+      # Evita Jekyll en Pages
+      - name: Disable Jekyll
+        run: touch dist/.nojekyll
 
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: ${{ env.OUT_DIR }}
+          path: dist
 
   deploy:
+    needs: build
+    runs-on: ubuntu-latest
     environment:
       name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
       url: ${{ steps.deployment.outputs.page_url }}
     runs-on: ubuntu-latest
     needs: build
