--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -7,6 +7,10 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: pages
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -21,11 +25,19 @@ jobs:
         run: |
           if [ -f package-lock.json ]; then npm ci; else npm install; fi
 
-      - name: Build
-        run: npm run build
+      - name: Build (Expo Web -> dist)
+        run: |
+          # Si existe script build, úsalo. Si no, exporta con Expo a dist.
+          if npm run | grep -qE ' build'; then
+            npm run build
+          else
+            npx expo export --platform web --output-dir dist
+          fi
 
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./dist
+          cname: scankeyapp.com
+          enable_jekyll: false
